<resources>
    <string name="app_name">Mobilitätsapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Eingeloggt als</string>
    <string name="nav_header_subtitle">nutzer.mail</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Anmelden</string>
    <string name="menu_home">Home</string>
    <string name="menu_dark_theme">Dark Theme</string>
    <string name="menu_tracking">Tracking</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_logoff">Abmelden</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="permission_rationale">All the time location permission required for core functionality</string>
    <string name="permission_denied_explanation">App will not work as all-the-time permissions are required. Restart or reinstall.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="changepassword_currentpassword">Aktuelles Passwort</string>
    <string name="changepassword_confirmnewpassword">Neues Passwort bestätigen</string>
    <string name="changepassword_button">Passwort ändern</string>
    <string name="changepassword_newpassword">Neues Passwort</string>
    <string name="changepassword_newpassword2">Neues Passwort</string>
    <string name="ways_spinnertext">Fahrten im:</string>
    <string name="analysis_spinnertext">Analyseergebnisse für:</string>
    <string name="navigationdrawermenu">Weiteres</string>
    <string name="bottomnavigation_analysis">Analyseergebnisse</string>
    <string name="bottomnavigation_ways">Fahrten</string>
    <string name="changemail_newmail">Neue E-Mail-Adresse</string>
    <string name="changemail_changebutton">E-Mail-Adresse ändern</string>
    <string name="changepassword_oldpassword">Altes Passwort</string>
    <string name="changepassword_newpasswordconfirm">Bestätigen</string>
    <string name="logoff_success">Erfolgreich abgemeldet!</string>
    <string name="login_mail">E-Mail</string>
    <string name="login_password">Passwort</string>
    <string name="login_loginbutton">Anmelden</string>
    <string name="login_forgotpasswordbutton">Passwort vergessen</string>
    <string name="login_registerbutton">Registrieren</string>
    <string name="registration_mail">E-Mail</string>
    <string name="registration_password">Passwort</string>
    <string name="registration_confirmpassword">Passwort bestätigen</string>
    <string name="registration_registerbutton">Registrieren</string>
    <string name="registration_termscheckbox">Datennutzungsrechte akzeptieren</string>
    <string name="resetpassword_mail">E-Mail</string>
    <string name="resetpassword_resetbutton">Passwort zurücksetzen</string>
    <string name="deleteuser_password">Passwort</string>
    <string name="deleteuser_button">Account löschen</string>
</resources>
